# backend-django-template

./: .env  .pre-commit-config.yaml  LICENSE  README.md  development.md  docker-compose.override.yml  docker-compose.yml
app/: .gitignore  Dockerfile  pyproject.toml
app/app/: settings.py  urls.py
app/core/: decorators.py  helpers.py  models.py
app/core/management/commands/: populate_db.py  wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_auto_20240627_2204.py
app/core/tests/: test_commands.py
app/item/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
app/item/migrations/: 0001_initial.py
app/order/: admin.py  models.py  serializers.py  urls.py  views.py
app/order/migrations/: 0001_initial.py  0002_order_status.py
app/user/: admin.py  definitions.py  models.py  serializers.py  urls.py  views.py
app/user/migrations/: 0001_initial.py
hooks/: commit_msg_format.py
